correção agenda sábado

--- a/agenda.html
+++ b/agenda.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -71,7 +70,7 @@
 
            <div class="row">
             <div class="col s12">
-              <h6 class="center">DIA 1 - SEXTA FEIRA</h6>
+              <h6 class="center">DIA 2 - SÁBADO</h6>
               <br>
                 <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width z-depth-1">
                     <li class="tab col s4"><a href="#time-1">08:00</a></li>
@@ -90,13 +89,13 @@
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
-                        Auditorio
+                        Auditório
                         <Br>
                           <img
                           class="responsive-img"
                           src="images/speakers/engenheira.coelho.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Leticia Coelho"
+                          alt="Foto do palestrante invocado Leticia Coelho"
                           id="img-speakers"
                           width="60%"
                         />
@@ -112,7 +111,7 @@
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
-                        sala 01 <br>
+                        Sala 01 <br>
                         <img
                         src="images/speakers/IngriddosSantos.webp"
                         title="Ingrid dos Santos"
@@ -129,12 +128,12 @@
 
                     <div class="col s12 m4 l4">
                       <div class="col s12 m6 offset-m3">
-                        sala 02<br>
+                        Sala 02<br>
                         <img
                           class="responsive-img"
                           src="images/speakers/RosanaMarques.webp"
-                          title="Foto do palestrante roxeda Anderson Aragão"
-                          alt="Foto do palestrante roxeda Anderson Aragão"
+                          title="Foto do palestrante roxeda Rosana Marques"
+                          alt="Foto do palestrante roxeda Rosana Marques"
                           id="img-speakers"
                           width="60%"
                         />
@@ -149,12 +148,12 @@
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
-                        Auditorio <br>
+                        Auditório <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/ElenaGiuli.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Elena Giuli"
+                          alt="Foto do palestrante invocado Elena Giuli"
                           id="img-speakers"
                           width="60%"
                         />
@@ -171,8 +170,8 @@
                           <img
                           class="responsive-img"
                           src="images/speakers/YanVancelis.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Yan Vancelis"
+                          alt="Foto do palestrante invocado Yan Vancelis"
                           id="img-speakers"
                           width="60%"
                         />
@@ -185,10 +184,11 @@
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Sala 02 <br>
                         <img
                         src="images/speakers/HilderjaresMartins.webp"
-                        title="Ingrid dos Santos"
-                        alt="Ingrid dos Santos"
+                        title="Hilderjares Martins"
+                        alt="Hilderjares Martins"
                         width="60%"
                         id="img-speakers"
                       />
@@ -211,11 +211,12 @@
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Auditório <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/LeoCavalcante.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Leo Cavalcante"
+                          alt="Foto do palestrante invocado Leo Cavalcante"
                           id="img-speakers"
                           width="60%"
                         />
@@ -227,11 +228,12 @@
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Sala 01 <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/DouglasMedeiros.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Douglas Medeiros"
+                          alt="Foto do palestrante invocado Douglas Medeiros"
                           id="img-speakers"
                           width="60%"
                         />
@@ -243,10 +245,11 @@
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Sala 02 <br>
                         <img
                         src="images/speakers/DiegoBorges.webp"
-                        title="Ingrid dos Santos"
-                        alt="Ingrid dos Santos"
+                        title="Diego Borges"
+                        alt="Diego Borges"
                         width="60%"
                         id="img-speakers"
                       />
@@ -261,11 +264,12 @@
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Auditório <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/ViniciusDias.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Vinicius Dias"
+                          alt="Foto do palestrante invocado Vinicius Dias"
                           id="img-speakers"
                           width="60%"
                         />
@@ -277,11 +281,12 @@
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Sala 01 <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/ViniciusCampitelli.webp"
-                          title="Foto do palestrante invocado Luiz Siqueira"
-                          alt="Foto do palestrante invocado Luiz Siqueira"
+                          title="Foto do palestrante invocado Vinicius Campitelli"
+                          alt="Foto do palestrante invocado Vinicius Campitelli"
                           id="img-speakers"
                           width="60%"
                         />
@@ -293,10 +298,11 @@
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Sala 02 <br>
                         <img
                         src="images/speakers/LeoCarmo.webp"
-                        title="Ingrid dos Santos"
-                        alt="Ingrid dos Santos"
+                        title="Leo Carmo"
+                        alt="Leo Carmo"
                         width="60%"
                         id="img-speakers"
                       />
@@ -319,11 +325,12 @@
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m6 l6"  style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Auditório <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/MonicaCraveiro.webp"
-                          title="Foto da palestrante arretada Daiane Alves"
-                          alt="Foto da palestrante arretada Daiane Alves"
+                          title="Foto da palestrante arretada Monica Craveiro"
+                          alt="Foto da palestrante arretada Monica Craveiro"
                           id="img-speakers"
                           width="60%"
                         />
@@ -334,11 +341,12 @@
                     </div>
                     <div class="col s12 m6 l6">
                       <div class="col s12 m6 offset-m3">
+                        Sala 01 <br>
                         <img
                           class="responsive-img"
                           src="images/speakers/JulianaMartins.webp"
-                          title="Foto da palestrante invocada Helena Saminez"
-                          alt="Foto da palestrante invocada Helena Saminez"
+                          title="Foto da palestrante invocada Juliana Martins"
+                          alt="Foto da palestrante invocada Juliana Martins"
                           id="img-speakers"
                           width="60%"
                         />
@@ -353,11 +361,12 @@
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m6 l6" style="margin-bottom: 50px;">
                       <div class="col s12 m6 offset-m3">
+                        Auditório <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/RafaelNeris.webp"
-                          title="Foto do palestrante arretado Bruno Lopes"
-                          alt="Foto do palestrante arretado Bruno Lopes"
+                          title="Foto do palestrante arretado Rafael Neris"
+                          alt="Foto do palestrante arretado Rafael Neris"
                           id="img-speakers"
                           width="60%"
                         />
@@ -368,11 +377,12 @@
                     </div>
                     <div class="col s12 m6 l6">
                       <div class="col s12 m6 offset-m3">
+                        Sala 01 <br>
                         <img
                           class="responsive-img"
                           src="images/speakers/MarcelSantos.webp"
-                          title="Foto do palestrante arretada Leticia Coelho"
-                          alt="Foto do palestrante arretada Leticia Coelho"
+                          title="Foto do palestrante arretada Marcel Santos"
+                          alt="Foto do palestrante arretada Marcel Santos"
                           id="img-speakers"
                           width="60%"
                         />
@@ -386,7 +396,8 @@
                 <div id="time-9" class="col s12 z-depth-1">
                   <div class="row center" style="margin-top: 40px;">
                     <div class="col l12 s12">
-                      <h3 class="center brown-text">MESA REDONDA</h3>
+                      Auditório <br>
+                      <h3 class="center brown-text">MESA REDONDA - Comunidades</h3>
                       <br><br>
                     </div>
                   </div>
