feat: ✨ adicionando despesas e atualizando agenda

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <a class="scrollSuave" href="https://phpeste.org">Início</a>
               </li>
               <li><a class="scrollSuave" href="#about">Sobre</a></li>
+              <li><a class="scrollSuave" href="#finance">Prestação de Contas</a></li>
               <li><a class="scrollSuave" href="#local">Local</a></li>
               <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
               <li><a class="scrollSuave" href="#schedule">Programação</a></li>
@@ -104,6 +105,7 @@
                 <a class="scrollSuave" href="https://phpeste.org">Início</a>
               </li>
               <li><a class="scrollSuave" href="#about">Sobre</a></li>
+              <li><a class="scrollSuave" href="#finance">Prestação de Contas</a></li>
               <li><a class="scrollSuave" href="#local">Local</a></li>
               <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
               <li><a class="scrollSuave" href="#schedule">Programação</a></li>
@@ -402,6 +404,103 @@
                 alt="Logomarca da Comunidade Github Fortaleza"
                 src="images/comunidades/react-ce.webp"
               />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="section" id="finance">
+        <div class="row">
+          <div class="col s12 m12 center">
+            <h2 class="center brown-text">Prestação de contas</h2>
+            <h3>Despesas</h3>
+            <table id="table-expenses" class="striped">
+              <thead>
+                <th>Detalhamento</th>
+                <th>Valor</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Material gráfico</td>
+                  <td>R$ 2.078,60</td>
+                </tr>
+                <tr>
+                  <td>4 coffee breaks (descartáveis, alimentação, rapaduras, frutas, etc)</td>
+                  <td>R$ 18.376,36</td>
+                </tr>
+                <tr>
+                  <td>Cordão dos crachás</td>
+                  <td>R$ 2.480,00</td>
+                </tr>
+                <tr>
+                  <td>Camisas</td>
+                  <td>R$ 10.660,00</td>
+                </tr>
+                <tr>
+                  <td>Sacolas personalizadas</td>
+                  <td>R$ 400,00</td>
+                </tr>
+                <tr>
+                  <td>Custos com palestrantes (casa, van, alimentação)</td>
+                  <td>R$ 8.692,00</td>
+                </tr>
+                <tr>
+                  <td>Banda de forró</td>
+                  <td>R$ 700,00</td>
+                </tr>
+                <tr>
+                  <td>Anuncios Instagram</td>
+                  <td>R$ 120,00</td>
+                </tr>
+                <tr>
+                  <td>Canecas dos palestrantes</td>
+                  <td>R$ 750,00</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td>Total</td>
+                  <td>R$ 44.256,96</td>
+                </tr>
+              </tfoot>
+            </table>
+            <h3>Receita</h3>
+            <table id="table-revenue" class="striped">
+              <thead>
+                <tr>
+                  <th>Detalhamento</th>
+                  <th>Valor</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Patrocício Diamante (Accusense)</td>
+                  <td>R$ 12.000,00</td>
+                </tr>
+                <tr>
+                  <td>Patrocínio Bronze (Betho & ME2)</td>
+                  <td>R$ 6.000,00</td>
+                </tr>
+                <tr>
+                  <td>Financiamento Coletivo (pessoa física)</td>
+                  <td>R$ 3.259,35</td>
+                </tr>
+                <tr>
+                  <td>Venda de ingressos (Sympla)</td>
+                  <td>R$ 24.042,00</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td>Total</td>
+                  <td>R$ 45.301,35</td>
+                </tr>
+              </tfoot>
+            </table>
+            <div style="display: flex; justify-content: center;">
+              <p id="result-balance">SALDO: <span>R$ 1.044,39</span></p>
             </div>
           </div>
         </div>
