--- a/agenda.html
+++ b/agenda.html
@@ -67,7 +67,320 @@
                   <h3 class="center brown-text">PROGRAMAÇÃO</h3>
                 </div>
             </div>
-
+            <div class="row">
+              <div class="col s12">
+                <h6 class="center">DIA 1 - SEXTA FEIRA</h6>
+                <br>
+                  <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width z-depth-1">
+                      <li class="tab col s4"><a href="#time-1">07:30</a></li>
+                      <li class="tab col s4"><a href="#time-2">09:00</a></li>
+                      <li class="tab col s4"><a href="#time-3">09:50</a></li>
+                      <li class="tab col s4"><a href="#time-4">10:40</a></li>
+                      <li class="tab col s4"><a href="#time-5">11:30</a></li>
+                      <li class="tab col s4"><a href="#time-6">13:30</a></li>
+                      <li class="tab col s4"><a href="#time-7">14:30</a></li>
+                      <li class="tab col s4"><a href="#time-8">15:10</a></li>
+                      <li class="tab col s4"><a href="#time-9">16:00</a></li>
+                      <li class="tab col s4"><a href="#time-10">17:00</a></li>
+                      <li class="tab col s4"><a href="#time-11">17:15</a></li>
+                      <li class="tab col s4"><a href="#time-12">17:30</a></li>
+                      <li class="tab col s4"><a href="#time-13">19:00</a></li>
+                  </ul>
+                  <div id="time-1" class="col s12 z-depth-1">
+                      <div class="row center" style="margin-top: 40px;">
+                        <div class="col l12 s12">
+                          <h3 class="center brown-text">CREDENCIAMENTO E COFFEE DE BOAS VINDAS</h3>
+                          <br><br>
+                          <img class="responsive-img" title="Logomarca do evento PHPeste branca"
+                            alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
+                        </div>
+                      </div>
+                  </div>
+                  <div id="time-2" class="col s12 z-depth-1">
+                      <div class="row center-align" style="margin-top: 40px;">
+                        <div class="col s12 m6 l6" style="margin-bottom: 50px;">
+                          <div class="col s12 m6 offset-m3">
+                              <img
+                              class="responsive-img"
+                              src="images/speakers/LuizSiqueira.webp"
+                              title="Foto do palestrante invocado Luiz Siqueira"
+                              alt="Foto do palestrante invocado Luiz Siqueira"
+                              id="img-speakers"
+                              width="60%"
+                            />
+                            <p class="speaker-name" style="font-size: 22px;">Luiz Siqueira</p>
+                            <p class="speaker-location">Recife - PE</p>
+                            <h6>Código Mestre: <em>A Arte de Evoluir do Dev ao Tech Lead</em></h6>
+                          </div>
+                        </div>
+                        <div class="col s12 m6 l6">
+                          <div class="col s12 m6 offset-m3">
+                            <img
+                              class="responsive-img"
+                              src="images/speakers/AndersonAragao.webp"
+                              title="Foto do palestrante roxeda Anderson Aragão"
+                              alt="Foto do palestrante roxeda Anderson Aragão"
+                              id="img-speakers"
+                              width="60%"
+                            />
+                            <p class="speaker-name" style="font-size: 22px;">Anderson Aragão</p>
+                            <p class="speaker-location">João Pessoa - PB</p>
+                            <h6>Observabilidade com OpenTelemetry: <em>Vigie suas APIs!</em></h6>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+                  <div id="time-3" class="col s12 z-depth-1 ">
+                    <div class="row center-align" style="margin-top: 40px;">
+                      <div class="col s12 m6 l6" style="margin-bottom: 50px;">
+                        <div class="col s12 m6 offset-m3">
+                            <img
+                            class="responsive-img"
+                            src="images/speakers/SandraRayane.webp"
+                            title="Foto da palestrante desenrolada Sandra Rayane"
+                            alt="Foto da palestrante desenrolada Sandra Rayane"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Sandra Rayane</p>
+                          <p class="speaker-location">Fortaleza - CE</p>
+                          <h6>A importância do <em>Teste de Software na garantia da qualidade e confiabilidade</em> de sistemas</h6>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l6">
+                        <div class="col s12 m6 offset-m3">
+                          <img
+                            class="responsive-img"
+                            src="images/speakers/LiviaCarolina.webp"
+                            title="Foto da palestrante roxeda Lívia Carolina"
+                            alt="Foto da palestrante roxeda Lívia Carolina"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Lívia Carolina</p>
+                          <p class="speaker-location">Rio de Janeiro - RJ</p>
+                          <h6>OJS: o projeto canadense para <em>gestão de publicações cientificas</em> que conquistou o Brasil</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-4" class="col s12 z-depth-1">
+                    <div class="row center-align" style="margin-top: 40px;">
+                      <div class="col s12 m6 l6" style="margin-bottom: 50px;">
+                        <div class="col s12 m6 offset-m3">
+                            <img
+                            class="responsive-img"
+                            src="images/speakers/FernandoSantos.webp"
+                            title="Foto do palestrante desenrolado Fernando Pereira dos Santos (ferox)"
+                            alt="Foto do palestrante desenrolado Fernando Pereira dos Santos (ferox)"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Fernando Santos</p>
+                          <p class="speaker-location">João Pessoa - PB</p>
+                          <h6>Lando para desenvolvedores PHP</h6>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l6">
+                        <div class="col s12 m6 offset-m3">
+                          <img
+                            class="responsive-img"
+                            src="images/speakers/EvaldoBarbosa.webp"
+                            title="Foto do palestrante desenrolado Evaldo Barbosa"
+                            alt="Foto do palestrante desenrolado Evaldo Barbosa"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Evaldo Barbosa</p>
+                          <p class="speaker-location">São Luíz - MA</p>
+                          <h6>Arquitetura Orientada a Eventos (EDA): <em>Uma visão sistemática</em></h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-5" class="col s12 z-depth-1">
+                    <div class="row center-align"" style="margin-top: 40px;">
+                      <div class="col l12 s12">
+                        <h3 class="center brown-text">ALMOÇO</h3>
+                        <br><br>
+                        <img class="responsive-img" title="Logomarca do evento PHPeste branca"
+                          alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-6" class="col s12 z-depth-1">
+                    <div class="row center-align" style="margin-top: 40px;">
+                      <div class="col s12 m6 l6" style="margin-bottom: 50px;">
+                        <div class="col s12 m6 offset-m3">
+                            <img
+                            class="responsive-img"
+                            src="images/speakers/VitorMattos.webp"
+                            title="Foto do palestrante roxeda Vitor Mattos"
+                            alt="Foto do palestrante roxeda Vitor Mattos"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Vitor Mattos</p>
+                          <p class="speaker-location">Rio de Janeiro - RJ</p>
+                          <h6>Testes automatizados em API: <em>usando Github Actions e outras ferramentas</em></h6>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l6">
+                        <div class="col s12 m6 offset-m3">
+                          <img
+                            class="responsive-img"
+                            src="images/speakers/DanielLima.webp"
+                            title="Foto do palestrante invocado Daniel Lima"
+                            alt="Foto do palestrante invocado Daniel Lima"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Daniel Lima</p>
+                          <p class="speaker-location">Russas - CE</p>
+                          <h6><em>Explorando a Web:</em> Construindo Crawlers eficientes com Symfony</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-7" class="col s12 z-depth-1">
+                    <div class="row center-align" style="margin-top: 40px;">
+                      <div class="col s12 m6 l6"  style="margin-bottom: 50px;">
+                        <div class="col s12 m6 offset-m3">
+                            <img
+                            class="responsive-img"
+                            src="images/speakers/DaianeAlves.webp"
+                            title="Foto da palestrante arretada Daiane Alves"
+                            alt="Foto da palestrante arretada Daiane Alves"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Daiane Alves</p>
+                          <p class="speaker-location">Rio de Janeiro - RJ</p>
+                          <h6>LibreSign: <em>Assinatura Eletrônica com PHP</em></h6>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l6">
+                        <div class="col s12 m6 offset-m3">
+                          <img
+                            class="responsive-img"
+                            src="images/speakers/HelenaSaminez.webp"
+                            title="Foto da palestrante invocada Helena Saminez"
+                            alt="Foto da palestrante invocada Helena Saminez"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Helena Saminez</p>
+                          <p class="speaker-location">São Luís - MA</p>
+                          <h6>De suporte técnico a desenvolvimento: <em>Uma transição natural?</em></h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-8" class="col s12 z-depth-1">
+                    <div class="row center-align" style="margin-top: 40px;">
+                      <div class="col s12 m6 l6" style="margin-bottom: 50px;">
+                        <div class="col s12 m6 offset-m3">
+                            <img
+                            class="responsive-img"
+                            src="images/speakers/BrunoLopes.webp"
+                            title="Foto do palestrante arretado Bruno Lopes"
+                            alt="Foto do palestrante arretado Bruno Lopes"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Bruno Lopes</p>
+                          <p class="speaker-location">Fortaleza - CE</p>
+                          <h6>Esteganografia: <em>A arte de ocultar uma mensagem dentro de outra,</em> com PHP!</h6>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l6">
+                        <div class="col s12 m6 offset-m3">
+                          <img
+                            class="responsive-img"
+                            src="images/speakers/engenheira.coelho.webp"
+                            title="Foto do palestrante arretada Leticia Coelho"
+                            alt="Foto do palestrante arretada Leticia Coelho"
+                            id="img-speakers"
+                            width="60%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Leticia Coelho</p>
+                          <p class="speaker-location">Florianópolis - SC</p>
+                          <h6><em>HTML limpo,</em> um overview sobre os 04 pilares</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-9" class="col s12 z-depth-1">
+                    <div class="row center" style="margin-top: 40px;">
+                      <div class="col l12 s12">
+                        <h3 class="center brown-text">MERENDA</h3>
+                        <br><br>
+                        <img class="responsive-img" title="Logomarca do evento PHPeste branca"
+                          alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-10" class="col s12 z-depth-1">
+                    <div class="row center" style="margin-top: 40px;">
+                      <div class="col l12 s12">
+                        <h3 class="center brown-text">SHOW DE HUMOR DO POKEMAO </h3>
+                        <br><br>
+                        <img class="responsive-img" title="Logomarca do evento PHPeste branca"
+                          alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-11" class="col s12 z-depth-1">
+                    <div class="row center" style="margin-top: 40px;">
+                      <div class="col l12 s12">
+                        <h3 class="center brown-text">CERIMÔNIA DE ABERTURA</h3>
+                        <br><br>
+                        <img class="responsive-img" title="Logomarca do evento PHPeste branca"
+                          alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
+                      </div>
+                    </div>
+                  </div>
+                  <div id="time-12" class="col s12 z-depth-1">
+                  <div class="row center" style="margin-top: 40px;">
+                    <div class="col l12 s12">
+                      <h3 class="center brown-text">MESA REDONDA: <br>
+                        COMO VAI FICAR O MERCADO DE <br> DESENVOLVIMENTO DAQUI PARA FRENTE?
+                        <p><br> CONVIDADOS: Monica, Eduardo, Swoleo, Dennis Braga.
+                          <br> MEDIADOR: Wil Correa.</p>
+                      </h3>
+                      <br><br>
+                      <img class="responsive-img" title="Logomarca do evento PHPeste branca"
+                        alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
+                    </div>
+                  </div>
+                  </div>
+                  <div id="time-13" class="col s12 z-depth-1">
+                    <div class="row center-align" style="margin-top: 40px;">
+                      <div class="col s12 m10">
+                        <div class="col s12 m10 offset-m3">
+                          <h6 class="brown-text">KEYNOTE</h6>
+                          <h6>Engenheira de Software, criadora de conteúdo, mentora,
+                            escritora, palestrante.</h6>
+                          <br>
+                            <img
+                            class="responsive-img"
+                            src="images/speakers/engenheira.coelho.webp"
+                            title="Foto da palestrante arretada Leticia Coelho"
+                            alt="Foto da palestrante arretada Leticia Coelho"
+                            id="img-speakers"
+                            width="70%"
+                          />
+                          <p class="speaker-name" style="font-size: 22px;">Leticia Coelho</p>
+                          <p class="speaker-location">Florianópolis - SC</p>
+                         <h6>Integração de serviços de IA. <br />
+                          5 etapas para identificar e implementar integração com
+                          AIaaS.</h6>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+             </div>
            <div class="row">
             <div class="col s12">
               <h6 class="center">DIA 2 - SÁBADO</h6>
